Remove OptionalOftring
