# api/openapi.yaml
@@ -3078,17 +3078,6 @@ components:
           type: boolean
       title: NumberFormat
       type: object
-    OptionalOfstring:
-      example:
-        present: true
-        empty: true
-      properties:
-        empty:
-          type: boolean
-        present:
-          type: boolean
-      title: OptionalOfstring
-      type: object
     Record:
       example:
         path: path
@@ -3232,9 +3221,7 @@ components:
       type: object
     SetRecord:
       example:
-        path:
-          present: true
-          empty: true
+        path: path
         cells:
         - columnId: columnId
           referencedIds:
@@ -3255,7 +3242,7 @@ components:
         id:
           type: string
         path:
-          $ref: '#/components/schemas/OptionalOfstring'
+          type: string
       title: SetRecord
       type: object
     StreamingResponseBody:
