# src/main/java/com/gridly/api/model/OptionalOfstring.java
@@ -1,132 +1,0 @@
-/*
- * Gridly API
- * Gridly API documentation
- *
- * The version of the OpenAPI document: 3.21.0
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-
-package com.gridly.api.model;
-
-import java.util.Objects;
-import java.util.Arrays;
-import com.google.gson.TypeAdapter;
-import com.google.gson.annotations.JsonAdapter;
-import com.google.gson.annotations.SerializedName;
-import com.google.gson.stream.JsonReader;
-import com.google.gson.stream.JsonWriter;
-import io.swagger.annotations.ApiModel;
-import io.swagger.annotations.ApiModelProperty;
-import java.io.IOException;
-import java.io.Serializable;
-
-/**
- * OptionalOfstring
- */
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen")
-public class OptionalOfstring implements Serializable {
-  private static final long serialVersionUID = 1L;
-
-  public static final String SERIALIZED_NAME_EMPTY = "empty";
-  @SerializedName(SERIALIZED_NAME_EMPTY)
-  private Boolean empty;
-
-  public static final String SERIALIZED_NAME_PRESENT = "present";
-  @SerializedName(SERIALIZED_NAME_PRESENT)
-  private Boolean present;
-
-  public OptionalOfstring() { 
-  }
-
-  public OptionalOfstring empty(Boolean empty) {
-    
-    this.empty = empty;
-    return this;
-  }
-
-   /**
-   * Get empty
-   * @return empty
-  **/
-  @javax.annotation.Nullable
-  @ApiModelProperty(value = "")
-
-  public Boolean isEmpty() {
-    return empty;
-  }
-
-
-  public void setEmpty(Boolean empty) {
-    this.empty = empty;
-  }
-
-
-  public OptionalOfstring present(Boolean present) {
-    
-    this.present = present;
-    return this;
-  }
-
-   /**
-   * Get present
-   * @return present
-  **/
-  @javax.annotation.Nullable
-  @ApiModelProperty(value = "")
-
-  public Boolean isPresent() {
-    return present;
-  }
-
-
-  public void setPresent(Boolean present) {
-    this.present = present;
-  }
-
-
-  @Override
-  public boolean equals(Object o) {
-    if (this == o) {
-      return true;
-    }
-    if (o == null || getClass() != o.getClass()) {
-      return false;
-    }
-    OptionalOfstring optionalOfstring = (OptionalOfstring) o;
-    return Objects.equals(this.empty, optionalOfstring.empty) &&
-        Objects.equals(this.present, optionalOfstring.present);
-  }
-
-  @Override
-  public int hashCode() {
-    return Objects.hash(empty, present);
-  }
-
-  @Override
-  public String toString() {
-    StringBuilder sb = new StringBuilder();
-    sb.append("class OptionalOfstring {\n");
-    sb.append("    empty: ").append(toIndentedString(empty)).append("\n");
-    sb.append("    present: ").append(toIndentedString(present)).append("\n");
-    sb.append("}");
-    return sb.toString();
-  }
-
-  /**
-   * Convert the given object to string with each line indented by 4 spaces
-   * (except the first line).
-   */
-  private String toIndentedString(Object o) {
-    if (o == null) {
-      return "null";
-    }
-    return o.toString().replace("\n", "\n    ");
-  }
-
-}
-
